--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "dependencies": {
-    "bootstrap": "^5.0.0",
-    "gulp-htmlmin": "^5.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.5",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^7.0.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-rollup": "^2.17.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-uglify": "^3.0.2",
-    "node-sass": "^6.0.0"
-  }
+    "scripts": {
+        "start": "npx gulp watch",
+        "build": "npx gulp"
+    },
+    "dependencies": {
+        "bootstrap": "^5.0.0",
+        "gulp-htmlmin": "^5.0.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.14.6",
+        "@babel/preset-env": "^7.14.5",
+        "babel-core": "^6.26.3",
+        "babel-preset-env": "^1.7.0",
+        "gulp": "^4.0.2",
+        "gulp-babel": "^8.0.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-cssmin": "^0.2.0",
+        "gulp-rollup": "^2.17.0",
+        "gulp-sass": "^4.1.0",
+        "gulp-uglify": "^3.0.2",
+        "node-sass": "^6.0.0"
+    }
 }
